# kcidb-rest

./: .env-example  .gitignore  Dockerfile.dbinit  Dockerfile.ingester  Dockerfile.kcidb-rest-rs  Dockerfile.logspec-worker  README.md  TODO  docker-compose.yaml  ingester_poc.py  kcidb_model.py  kcidb_restd.py  kcidb_schema.py  maestro_submitter.py  self-hosted.sh
.github/: main.yaml  staging.yaml
.github/workflows/: main.yaml  staging.yaml
PoC/: kcidb_model.py  kcidb_restd.py  maestro_submitter.py
data/: origins.yml  trees.yml
ingester/: ingester.py
kcidb-restd-rs/: Cargo.toml
kcidb-restd-rs/src/: main.rs
kcidb-restd-rs/static/: index.html
kcidb-restd-rs/tests/: test_rest.sh
kcidb-restd-rs/tools/: jwt_rest.py
logspec-worker/: logspec_api.py  logspec_worker.py  logspec_worker.yaml  logspec_worker.yaml.example
scripts/: dbinit.sh  generate_models_schemas.sh  setup_pgsql.sh
tools/: generate_submission.py
