[package]
name = "kcidb-restd-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["tokio"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
clap = { version = "4.5.35", features = ["derive"] }
jsonwebtoken = "9.3.1"
nix = { version = "0.30.1", features = ["user"] }
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["limit"] }
